2011-04-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Always print and return an error when wrong command-line
	  options are used. Also in quiet mode.

2011-04-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Improved error reporting. Return system error when an error occurs.
	* Don't quit after first error (like rm, ls, tar).
	* In quiet mode the return value is always zero.

2011-03-27 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Check if symbolic links point to
	  regular files.
	* dos2unix.c/unix2dos.c: Added short options -F, -R, -S.
	* po: update translations.

2011-03-24 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Changed options --follow, --no-follow,
	  to  --follow-symlink,  --replace-symlink,  --skip-symlink.
	* dos2unix.c/unix2dos.c: Options --force and --safe are only to
	  covert binary files or skip them.
	* dos2unix.c/unix2dos.c: Non-regular files that are not symbolic
	  links are never converted.

2011-03-23 Chris Wilson <cygwin@cwilson.fastmail.fm>
	* dos2unix.c/unix2dos.c: New options --follow and --no-follow.
	  In follow mode dos2unix writes to the symlink target, instead
	  of replacing the symbolic link with an output file.

2011-03-22 Chris Wilson <cygwin@cwilson.fastmail.fm>
	* querycp.c: Behave on Cygwin same as on Linux. Default
	  code page in ISO mode is CP437.

2011-03-21 Chris Wilson <cygwin@cwilson.fastmail.fm>
	* dos2unix.c/unix2dos.c:
	  - Cygwin may define WIN32 (via include files).
	  - bugfix: Cygwin: set mode to binary in stdio mode conversion.
	    Needed in case non-Cygwin program launches dos2unix.
	  - bugfix: set failure mode if rename fails in quiet mode.
	  - New option: -s, --safe. Opposite of -f, --force.
	* Makefile: Cleanup for Cygwin.

2011-03-19 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Install links instead of binary/manpage copies on Cygwin.

2011-03-05 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Replace GPL with FreeBSD license.